gac_sb/objects/AppATfeuilleCalcul__c.object
<CustomObject>
    <description>APPLICATION AT</description>
    <fields>
        <fullName>Abattement10pour__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Abattement CTN II (10%) ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Abattement20pour__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Abattement (20%) ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AlsaceMoselle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alsace Moselle ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AnneeFeuilleCalcul__c</fullName>
        <label>Année de la feuille de calcul</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BTP_CCMIP1__c</fullName>
        <label>BTP CCM IP1</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTP_CCMIT1__c</fullName>
        <label>BTP CCM IT1</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTP_CCMIT2__c</fullName>
        <label>BTP CCM IT2</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTP_CCMIT3__c</fullName>
        <label>BTP CCM IT3</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTP_NICSE__c</fullName>
        <label>BTP NIC SE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BTP_ValeurRisque__c</fullName>
        <formula>BTP_CCMIT1__c *  CTN__r.CCMIT1__c  + 
 BTP_CCMIT2__c *  CTN__r.CCMIT2__c  + 
 BTP_CCMIT3__c *  CTN__r.CCMIT3__c  + 
 BTP_CCMIT4__c *  CTN__r.CCMIT4__c  + 
 BTP_CCMIT5__c *  CTN__r.CCMIT5__c  + 
 BTP_CCMIT6__c *  CTN__r.CCMIT6__c  + 
 BTP_CCMIP1__c *  CTN__r.CCMIP1__c  + 
 GrosOeuvre__c *  CTN__r.CCMIP2__c  + 
 SecOeuvre__c  *  CTN__r.CCMIP3__c  + 
 Bureau__c     *  CTN__r.CCMIP4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BTP Valeur du risque</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B__c</fullName>
        <label>B</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bureau__c</fullName>
        <label>Bureau</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCMIP1_N_2__c</fullName>
        <label>CCM IP1 N-2</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCMIP1_N_3__c</fullName>
        <label>CCM IP1 N-3</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCMIP1_N_4__c</fullName>
        <label>CCM IP1 N-4</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCMIT1_N_2__c</fullName>
        <label>CCM IT1 N-2</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCMIT1_N_3__c</fullName>
        <label>CCM IT1 N-3</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCMIT1_N_4__c</fullName>
        <label>CCM IT1 N-4</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CTN</label>
        <referenceTo>AppATctn__c</referenceTo>
        <relationshipLabel>Feuilles de calcul</relationshipLabel>
        <relationshipName>Feuilles_de_calcul</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charges__c</fullName>
        <formula>Majoration__r.Charges__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Compensation__c</fullName>
        <formula>Majoration__r.Compensation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compensation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ControlerTauxIndividuel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>sert à exécuter le calcul du taux individuel après les autres workflow</description>
        <label>Controler taux individuel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Controler_Calcul2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Controler Calcul2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CotisCompl__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cotis compl</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CotisationSupplementaire__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cotisation supplémentaire</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateEffet__c</fullName>
        <label>Date d&apos;effet</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateNotification__c</fullName>
        <label>Date de notification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effectif__c</fullName>
        <label>Effectif</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EtablissementConcerne__c</fullName>
        <label>Etablissement concerné</label>
        <referenceTo>AppATetablissement__c</referenceTo>
        <relationshipLabel>Feuilles de calcul</relationshipLabel>
        <relationshipName>FeuillesCalcul</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FeuilleAnnee_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feuille année N-1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.EtablissementConcerne__c</field>
                <operation>equals</operation>
                <valueField>$Source.EtablissementConcerne__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AppATfeuilleCalcul__c</referenceTo>
        <relationshipLabel>Feuilles de calcul</relationshipLabel>
        <relationshipName>FeuillesCalcul</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FractionTauxCollectif__c</fullName>
        <formula>1-FractionTauxNet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fraction de taux collectif</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FractionTauxNet__c</fullName>
        <formula>IF( ISPICKVAL(CTN__r.TypeCTN__c,&apos;BAM&apos;),
    ((0.075*Effectif__c)+2.5)/25, 
    IF( AlsaceMoselle__c,
        ((0.075*Effectif__c)-1.25)/10,
        FLOOR( ((Effectif__c-19)/131) *1000)/1000
       )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fraction de taux net</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GrosOeuvre__c</fullName>
        <label>Gros oeuvre</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IDMission__c</fullName>
        <formula>EtablissementConcerne__r.Mission__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IDMission</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntituleFeuilleCalcul__c</fullName>
        <formula>&apos;Taux Accidents du Travail &apos;&amp;
AnneeFeuilleCalcul__c &amp;
CASE(TEXT( Type_de_feuille_de_calcul__c),
&apos;Initiale&apos;,&apos; notifié par les CARSAT/CRAM&apos;,
&apos;Refacturation&apos;,&quot; qui aurait été notifié sans l&apos;intervention de GAC&quot;,
&apos;simulée&apos;,&quot; grâce à l&apos;intervention de GAC&quot;,
&apos;Rectifiée&apos;,&quot; grâce à l&apos;intervention de GAC&quot;,
&quot; qui aurait été notifié sans l&apos;intervention de GAC&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intitulé de la feuille de calcul</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LienRapport__c</fullName>
        <description>&quot;/00OD0000006F7TH?pv0=&quot;+IDMission__c+&quot;&amp;ptable0=072D00000023l9v&amp;ocond0=w&amp;rtable0=01ID0000000zsZt&amp;rtablecol0=00ND000000659zG&amp;sfpc0_0=00ND00000065A1f&amp;sfpn0_0=eq&amp;sfpv0_0=Accord&amp;sfpc0_1=00ND00000065A1H&amp;sfpn0_1=eq&amp;sfpv0_1=Pas d&apos;appel / terminé&amp;ptable1=072D00000023l9v&amp;ocond1=w&amp;rtable1=01ID0000000zsZo&amp;rtablecol1=00ND000000659zD&amp;sfpc1_0=Name&amp;sfpn1_0=eq&amp;sfpv1_0=&quot;+TEXT(VALUE(AnneeFeuilleCalcul__c)-2)+&quot;,&quot;+TEXT(VALUE(AnneeFeuilleCalcul__c)-3)+&quot;,&quot;+TEXT(VALUE(AnneeFeuilleCalcul__c)-4)</description>
        <formula>HYPERLINK(&quot;/00OD0000006F7TH?pv0=&quot;+IDMission__c+&quot;&amp;ptable0=072D00000023l9v&amp;ocond0=w&amp;rtable0=01ID0000000zsZt&amp;rtablecol0=00ND000000659zG&amp;sfpc0_0=00ND00000065A1f&amp;sfpn0_0=eq&amp;sfpv0_0=Accord&amp;sfpc0_1=00ND00000065A1H&amp;sfpn0_1=eq&amp;sfpv0_1=Pas d&apos;appel / terminé&amp;ptable1=072D00000023l9v&amp;ocond1=w&amp;rtable1=01ID0000000zsZo&amp;rtablecol1=00ND000000659zD&amp;sfpc1_0=Name&amp;sfpn1_0=eq&amp;sfpv1_0=&quot;+TEXT(VALUE(AnneeFeuilleCalcul__c)-2)+&quot;,&quot;+TEXT(VALUE(AnneeFeuilleCalcul__c)-3)+&quot;,&quot;+TEXT(VALUE(AnneeFeuilleCalcul__c)-4) 
, &apos;Rapport&apos;,&apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lien Rapport</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LieuRisque__c</fullName>
        <label>Lieu du risque</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MajorationArreteeDu__c</fullName>
        <formula>Majoration__r.MajorationArreteeDu__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Majoration arrêtée du</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MajorationForfaitaireRisqueTrajet__c</fullName>
        <formula>Majoration__r.MajorationForfaitaireRisqueTrajet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Majoration Forfaitaire Risque Trajet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Majoration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Majoration</label>
        <referenceTo>AppATmajoration__c</referenceTo>
        <relationshipLabel>Feuilles de calcul</relationshipLabel>
        <relationshipName>Feuilles_de_calcul</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MasseSalarialeAnneeN_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Masse salariale Année N-2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AppATmasseSalariale__c.EtablissementConcerne__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.EtablissementConcerne__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AppATmasseSalariale__c</referenceTo>
        <relationshipLabel>Feuilles de calcul (Masse salariale N-2)</relationshipLabel>
        <relationshipName>Feuilles_de_calcul1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MasseSalarialeAnneeN_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Masse salariale Année N-3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AppATmasseSalariale__c.EtablissementConcerne__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.EtablissementConcerne__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AppATmasseSalariale__c</referenceTo>
        <relationshipLabel>Feuilles de calcul (Masse salariale N-3)</relationshipLabel>
        <relationshipName>Feuilles_de_calcul2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MasseSalarialeAnneeN_4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Masse salariale Année N-4</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AppATmasseSalariale__c.EtablissementConcerne__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.EtablissementConcerne__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AppATmasseSalariale__c</referenceTo>
        <relationshipLabel>Feuilles de calcul (Masse salariale N-4)</relationshipLabel>
        <relationshipName>Feuilles_de_calcul</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mission__c</fullName>
        <formula>HYPERLINK( EtablissementConcerne__r.Mission__c , EtablissementConcerne__r.Mission__r.Name , &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mission</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NICSection__c</fullName>
        <label>NIC Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NatureActivites__c</fullName>
        <label>Nature des activités</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Nettoyage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nettoyage CTN II ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Penibilite__c</fullName>
        <formula>Majoration__r.Penibilite__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pénibilité</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReferenceURSSAF__c</fullName>
        <label>Référence URSSAF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ristourne__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Ristourne</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Salaires__c</fullName>
        <label>Salaires</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SecOeuvre__c</fullName>
        <label>Sec. Oeuvre</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TauxApplicable__c</fullName>
        <formula>(TauxIndividuel__c +  CotisCompl__c + CotisationSupplementaire__c)</formula>
        <label>Taux applicable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TauxBrutSection__c</fullName>
        <formula>0.0001*FLOOR(10000* BTP_ValeurRisque__c *100/Salaires__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taux Brut Section</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TauxBrut__c</fullName>
        <description>IF( 
   LEN(TEXT(TotalValeurRisque__c*100/TotalMasseSalariale__c))&lt;7,
   TotalValeurRisque__c*100/TotalMasseSalariale__c,
   Value(LEFT(TEXT(TotalValeurRisque__c*100/TotalMasseSalariale__c),
               6))
   )</description>
        <formula>FLOOR((TotalValeurRisque__c*100/TotalMasseSalariale__c)*10000)/10000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taux brut</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TauxCollectif__c</fullName>
        <label>Taux collectif</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TauxExerciceAnterieur__c</fullName>
        <label>Taux exercice antérieur</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TauxIndividuel__c</fullName>
        <label>Taux Individuel</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TauxMixteArrondi__c</fullName>
        <formula>round(TauxMixte__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taux mixte arrondi</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TauxMixte__c</fullName>
        <label>Taux mixte</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TauxNetArrondi__c</fullName>
        <formula>round( TauxNet__c ,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taux Net Arrondi</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TauxNet__c</fullName>
        <formula>FLOOR( ((TauxBrut__c+MajorationForfaitaireRisqueTrajet__c)*(1+ Charges__c)+Compensation__c+ Penibilite__c  )*10000)/10000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taux net</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TexteTypeFeuille__c</fullName>
        <formula>IF( LEFT(TEXT( CTN__r.TypeCTN__c ),1)=&apos;B&apos;,&apos;&apos;,&apos;HORS BATIMENT ET TRAVAUX PUBLICS  - &apos;)&amp;
CASE( RecordType.DeveloperName ,
&apos;TauxMixte&apos;,&apos;TAUX MIXTE&apos;,
&apos;TauxReel&apos;,&apos;TAUX REEL&apos;,
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Texte type de feuille</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalMasseSalariale__c</fullName>
        <formula>MasseSalarialeAnneeN_2__r.MasseSalariale__c + MasseSalarialeAnneeN_3__r.MasseSalariale__c + MasseSalarialeAnneeN_4__r.MasseSalariale__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Masse salariale</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalValeurRisque__c</fullName>
        <label>Total valeur du risque</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_CCMIP1__c</fullName>
        <formula>CCMIP1_N_2__c +CCMIP1_N_3__c +CCMIP1_N_4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total CCM IP1</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_CCMIP2__c</fullName>
        <formula>CCMIP2_N_2__c + CCMIP2_N_3__c + CCMIP2_N_4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total CCM IP2</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_CCMIP3__c</fullName>
        <formula>CCMIP3_N_2__c + CCMIP3_N_3__c + CCMIP3_N_4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total CCM IP3</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_CCMIT1__c</fullName>
        <formula>CCMIT1_N_2__c + CCMIT1_N_3__c + CCMIT1_N_4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total CCM IT1</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_CCMIT2__c</fullName>
        <formula>CCMIT2_N_2__c +CCMIT2_N_3__c +CCMIT2_N_4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total CCM IT2</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_CCMIT3__c</fullName>
        <formula>CCMIT3_N_2__c + CCMIT3_N_3__c + CCMIT3_N_4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total CCM IT3</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TxtExplicatifCompteTriennal__c</fullName>
        <label>Txt explicatif cpt triennal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_de_feuille_de_calcul__c</fullName>
        <label>Type de feuille de calcul</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initiale</fullName>
                </value>
                <value>
                    <fullName>Rectifiée</fullName>
                </value>
                <value>
                    <fullName>Simulée</fullName>
                </value>
                <value>
                    <fullName>Refacturation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URSSAF__c</fullName>
        <label>URSSAF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValeurRisque_N_2__c</fullName>
        <formula>(CCMIT1_N_2__c * CTN__r.CCMIT1__c +
 CCMIT2_N_2__c * CTN__r.CCMIT2__c +
 CCMIT3_N_2__c * CTN__r.CCMIT3__c +
 CCMIT4_N_2__c * CTN__r.CCMIT4__c +
 CCMIT5_N_2__c * CTN__r.CCMIT5__c +
 CCMIT6_N_2__c * CTN__r.CCMIT6__c +
 CCMIP1_N_2__c * CTN__r.CCMIP1__c +
 CCMIP2_N_2__c * CTN__r.CCMIP2__c +
 CCMIP3_N_2__c * CTN__r.CCMIP3__c +
 CCMIP4_N_2__c * CTN__r.CCMIP4__c)*
IF( Nettoyage__c,0.8,1)*
IF(Abattement10pour__c,0.9,1)*
IF(Abattement20pour__c,0.8,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valeur du Risque N-2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ValeurRisque_N_3__c</fullName>
        <formula>(CCMIT1_N_3__c * CTN__r.CCMIT1__c + 
CCMIT2_N_3__c * CTN__r.CCMIT2__c + 
CCMIT3_N_3__c * CTN__r.CCMIT3__c + 
CCMIT4_N_3__c * CTN__r.CCMIT4__c + 
CCMIT5_N_3__c * CTN__r.CCMIT5__c + 
CCMIT6_N_3__c * CTN__r.CCMIT6__c + 
CCMIP1_N_3__c * CTN__r.CCMIP1__c + 
CCMIP2_N_3__c * CTN__r.CCMIP2__c + 
CCMIP3_N_3__c * CTN__r.CCMIP3__c + 
CCMIP4_N_3__c * CTN__r.CCMIP4__c)*
IF( Nettoyage__c,0.8,1)* 
IF(Abattement10pour__c,0.9,1)*
IF(Abattement20pour__c,0.8,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valeur du Risque N-3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ValeurRisque_N_4__c</fullName>
        <formula>(CCMIT1_N_4__c * CTN__r.CCMIT1__c + 
CCMIT2_N_4__c * CTN__r.CCMIT2__c + 
CCMIT3_N_4__c * CTN__r.CCMIT3__c + 
CCMIT4_N_4__c * CTN__r.CCMIT4__c + 
CCMIT5_N_4__c * CTN__r.CCMIT5__c + 
CCMIT6_N_4__c * CTN__r.CCMIT6__c + 
CCMIP1_N_4__c * CTN__r.CCMIP1__c + 
CCMIP2_N_4__c * CTN__r.CCMIP2__c + 
CCMIP3_N_4__c * CTN__r.CCMIP3__c + 
CCMIP4_N_4__c * CTN__r.CCMIP4__c)*
IF( Nettoyage__c,0.8,1)* 
IF(Abattement10pour__c,0.9,1)*
IF(Abattement20pour__c,0.8,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valeur du Risque N-4</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valeur_CCMIP1__c</fullName>
        <formula>Total_CCMIP1__c *  CTN__r.CCMIP1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valeur CCM IP1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valeur_CCMIP2__c</fullName>
        <formula>Total_CCMIP2__c *  CTN__r.CCMIP2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valeur CCM IP2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valeur_CCMIP3__c</fullName>
        <formula>Total_CCMIP3__c * CTN__r.CCMIP3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valeur CCM IP3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valeur_CCMIT1__c</fullName>
        <formula>Total_CCMIT1__c *  CTN__r.CCMIT1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valeur CCM IT1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valeur_CCMIT2__c</fullName>
        <formula>Total_CCMIT2__c *  CTN__r.CCMIT2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valeur CCM IT2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valeur_CCMIT3__c</fullName>
        <formula>Total_CCMIT3__c *  CTN__r.CCMIT3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valeur CCM IT3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Feuille de calcul</label>
    <nameField>
        <label>Nom de la feuille de calcul</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feuilles de calcul</pluralLabel>
    <recordTypes>
        <fullName>TauxMixte</fullName>
        <active>true</active>
        <label>Taux Mixte</label>
    </recordTypes>
    <recordTypes>
        <fullName>TauxReel</fullName>
        <active>true</active>
        <label>Taux Réel</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AppAT_abattement20_impossible_pr_CTN_II</fullName>
        <active>true</active>
        <errorConditionFormula>(Abattement20pour__c &amp;&amp;
ISPICKVAL(CTN__r.TypeCTN__c,&apos;II&apos;))</errorConditionFormula>
        <errorMessage>La case Abattement (20%) ne peut être cochée pour un CTN II</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AppAT_nett_abattement_que_pour_CTN_I</fullName>
        <active>true</active>
        <errorConditionFormula>(Nettoyage__c ||
Abattement10pour__c)&amp;&amp;
NOT(ISPICKVAL(CTN__r.TypeCTN__c,&apos;II&apos;))</errorConditionFormula>
        <errorMessage>Les cases nettoyages et Abattement ne peuvent être cochées que pour un CTN II</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AppAT_validation_Annee</fullName>
        <active>true</active>
        <errorConditionFormula>IF(LEFT(AnneeFeuilleCalcul__c,1)=&apos;2&apos;, 
NOT(REGEX( AnneeFeuilleCalcul__c, &apos;[2]{1}[0]{1}[0-9]{2}&apos;)), 
NOT(REGEX( AnneeFeuilleCalcul__c, &apos;[1]{1}[9]{1}[0-9]{2}&apos;)) 
)</errorConditionFormula>
        <errorDisplayField>AnneeFeuilleCalcul__c</errorDisplayField>
        <errorMessage>L&apos;année doit être au format 20XX ou 19XX</errorMessage>
    </validationRules>
</CustomObject>